syntax = "proto3";

option csharp_namespace = "UserService.Protos";

package users;

service UserService{
	rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
	string userId = 1;
}

message UserResponse {
	string userId = 1;
	string userName = 2;
}